[package]
name = "the-rosetta-block-trials"
version = "0.1.0"
edition = "2021"
description = "Recreation of the puzzle game: [7MMC] The Rosetta Block Trials by rubenscube "
readme = "README.md"
repository = "https://github.com/varpeti/the-rosetta-block-trials"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
